[project]
name = "stock-assistant-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=1.6.2",
    "botocore>=1.38.36",
    "duckduckgo-search>=8.0.4",
    "strands-agents>=0.1.7",
    "streamlit>=1.45.1",
    "yfinance>=0.2.63",
]
